// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: Component should render correctly 1`] = `
<styled.div>
  <Component
    error={false}
    name="A_FIELD_NAME"
    onChange={[Function]}
    value=""
  />
</styled.div>
`;

exports[`TextInput: Component should render error 1`] = `
<styled.div>
  <Component
    error={true}
    name="A_FIELD_NAME"
    onChange={[Function]}
    value=""
  />
  <styled.div>
    An error message
  </styled.div>
</styled.div>
`;
